--- a/ch08/e06.md
+++ b/ch08/e06.md
@@ -20,7 +20,7 @@ be "on" for each digit. Let's number the segments as follows:
 4|_3_|2
 ```
 
-Here's what the array might look like, wiyj each row representing one digit:
+Here's what the array might look like, with each row representing one digit:
 
 ```c
 const int segments[10][7] = {{1, 1, 1, 1, 1, 1, 0}};
